--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "build": "your-build-command-here"
+    "build": "npm run build"
   },
   "author": "",
   "license": "ISC",
